# resilience-metrics-release

./: CHANGELOG.md  Dockerfile  EULA.md  FAQ.md  LEMON_SQUEEZY_LISTING.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release-docker.yml
docs/: GRAFANA_GUIDE.md  GRAFANA_STACK.md
examples/: analysis.json  analysis_hostile.json  hostile.csv  make_hostile_csv.py  make_synth_csv.py  quick_png.py  quick_report.py  quick_svg.py  synth.csv
examples/grafana/: dashboard.json
grafana/: docker-compose.yml
grafana/provisioning/dashboards/: provider.yaml
grafana/provisioning/datasources/: ds.yaml
src/resilience/: __init__.py  cli.py  core.py
tests/: test_analyze.py
