[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resilience-metrics"
version = "0.1.0"
description = "CLI/SDK stub for resilience metrics (band/refusal/tracking/vitality)"
authors = [{name = "TDS Lab"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "typer>=0.9",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Eliot-System/resilience-metrics"
Documentation = "https://github.com/Eliot-System/resilience-metrics#readme"
Issues = "https://github.com/Eliot-System/resilience-metrics/issues"

[project.scripts]
resiliencectl = "resilience.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
